# Atmosphere.BE/Atmosphere.API/Controllers/ReadingController.cs
@@ -1,7 +1,9 @@
 using System.Net;
+using Aqua.EnumerableExtensions;
 using Atmosphere.Application.DTO;
 using Atmosphere.Application.Readings.Commands;
 using Atmosphere.Application.Readings.Queries;
+using Atmosphere.Core;
 using Atmosphere.Core.Enums;
 using MediatR;
 using Microsoft.AspNetCore.Authorization;
@@ -104,7 +106,9 @@ public class ReadingController : ControllerBase
     [HttpPost]
     [Authorize(Roles = nameof(UserRole.Admin) + "," + nameof(UserRole.Device))]
     [ProducesResponseType((int)HttpStatusCode.OK)]
-    public async Task<IActionResult> CreateReadings([FromBody, BindRequired] List<CreateReading> requests)
+    public async Task<IActionResult> CreateReadings(
+        [FromBody, BindRequired] List<CreateReading> requests
+    )
     {
         try
         {
@@ -114,6 +118,109 @@ public class ReadingController : ControllerBase
             }
 
             return this.Ok();
+        }
+        catch (Exception e)
+        {
+            return this.StatusCode(StatusCodes.Status500InternalServerError, e.Message);
+        }
+    }
+
+    [HttpGet]
+    [Authorize]
+    [ProducesResponseType(typeof(PagedList<ReadingDto>), (int)HttpStatusCode.OK)]
+    public async Task<IActionResult> GetPagedReadings(
+        [FromQuery] int pageNumber = 1,
+        [FromQuery] int pageSize = 50
+    )
+    {
+        try
+        {
+            var readings = await _mediator.Send(
+                new GetAllPagedReadings { PageNumber = pageNumber, PageSize = pageSize }
+            );
+
+            return this.Ok(readings);
+        }
+        catch (Exception e)
+        {
+            return this.StatusCode(StatusCodes.Status500InternalServerError, e.Message);
+        }
+    }
+
+    [HttpGet]
+    [Authorize]
+    [ProducesResponseType(typeof(PagedList<ReadingDto>), (int)HttpStatusCode.OK)]
+    public async Task<IActionResult> GetPagedReadingsByDevice(
+        [FromQuery] Guid deviceId,
+        [FromQuery] int pageNumber = 1,
+        [FromQuery] int pageSize = 50,
+        [FromQuery] DateTime? startDate = null,
+        [FromQuery] DateTime? endDate = null
+    )
+    {
+        try
+        {
+            var readings = await _mediator.Send(
+                new GetPagedReadingsByDevice
+                {
+                    DeviceId = deviceId,
+                    PageNumber = pageNumber,
+                    PageSize = pageSize,
+                    StartDate = startDate,
+                    EndDate = endDate
+                }
+            );
+
+            return this.Ok(readings);
+        }
+        catch (Exception e)
+        {
+            return this.StatusCode(StatusCodes.Status500InternalServerError, e.Message);
+        }
+    }
+
+    [HttpGet]
+    [Authorize]
+    [ProducesResponseType(typeof(PagedList<ReadingDto>), (int)HttpStatusCode.OK)]
+    public async Task<IActionResult> GetPagedReadingsByDate(
+        [FromQuery] DateTime? startDate = null,
+        [FromQuery] DateTime? endDate = null,
+        [FromQuery] int pageNumber = 1,
+        [FromQuery] int pageSize = 50
+    )
+    {
+        try
+        {
+            var readings = await _mediator.Send(
+                new GetPagedReadingsByDate
+                {
+                    StartDate = startDate ?? DateTime.MinValue,
+                    EndDate = endDate ?? DateTime.MaxValue,
+                    PageNumber = pageNumber,
+                    PageSize = pageSize
+                }
+            );
+
+            return this.Ok(readings);
+        }
+        catch (Exception e)
+        {
+            return this.StatusCode(StatusCodes.Status500InternalServerError, e.Message);
+        }
+    }
+
+    [HttpPost]
+    [Authorize]
+    [ProducesResponseType(typeof(Dictionary<DateTime, decimal>), (int)HttpStatusCode.OK)]
+    public async Task<IActionResult> GetChartData(
+        [FromBody, BindRequired] GetChartData request
+    )
+    {
+        try
+        {
+            var readings = await _mediator.Send(request);
+
+            return this.Ok(readings);
         }
         catch (Exception e)
         {
